<resources>
    <string name="app_name">PortofolioApp</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_android">Android</string>
    <string name="txt_flutter">Flutter</string>
    <string name="txt_uiux">UI UX</string>
    <string name="txt_experience">Experience</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_imageview">ImageView</string>
    <string name="txt_louis">Louis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_portofolio">Portofolio</string>
    <string name="txt_documentation_link">Documentation Link</string>
    <string name="txt_android_app">50 App Android</string>
    <string name="txt_flutter_app">50 Flutter App</string>
    <string name="txt_career">Career</string>
    <string name="txt_about">About</string>
    <string name="txt_content">Content</string>
    <string name="txt_detail_experience">Detail Experience</string>
</resources>