<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/profile_background"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_198dp"
            android:src="@drawable/navheader"
            android:id="@+id/ivBackgroundProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/txt_imageview"/>
        <ImageView
            android:layout_width="@dimen/_130dp"
            android:layout_height="@dimen/_130dp"
            android:layout_marginTop="@dimen/_130dp"
            android:src="@drawable/profile_header"
            android:id="@+id/ivProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBackgroundProfile"
            android:contentDescription="@string/txt_imageview"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/txt_louis"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            android:id="@+id/tvNameProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivProfile"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/txt_career"
            android:textAlignment="center"
            android:id="@+id/tvCareerProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/tvNameProfile"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_56dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="@dimen/_16dp"
            app:cardCornerRadius="@dimen/_10dp"
            android:id="@+id/cvLinkedinProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCareerProfile">
            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="@dimen/_56dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:src="@drawable/linkedin"
                    android:contentDescription="@string/txt_imageview"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_56dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:backgroundTint="@color/blue"
            app:cardCornerRadius="@dimen/_10dp"
            android:id="@+id/cvGithubProfile"
            app:layout_constraintBottom_toBottomOf="@id/cvLinkedinProfile"
            app:layout_constraintStart_toEndOf="@id/cvLinkedinProfile"
            app:layout_constraintEnd_toStartOf="@id/cvEmailProfile"
            app:layout_constraintTop_toTopOf="@id/cvLinkedinProfile">
            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="@dimen/_56dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:src="@drawable/github"
                    android:contentDescription="@string/txt_imageview"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_56dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:backgroundTint="@color/blue"
            app:cardCornerRadius="@dimen/_10dp"
            android:id="@+id/cvEmailProfile"
            app:layout_constraintStart_toEndOf="@id/cvGithubProfile"
            app:layout_constraintBottom_toBottomOf="@id/cvGithubProfile"
            app:layout_constraintEnd_toStartOf="@id/cvPhoneProfile"
            app:layout_constraintTop_toTopOf="@id/cvGithubProfile">
            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="@dimen/_56dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:src="@drawable/mail"
                    android:contentDescription="@string/txt_imageview"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_56dp"
            android:layout_height="@dimen/_56dp"
            android:layout_marginStart="@dimen/_32dp"
            android:backgroundTint="@color/blue"
            app:cardCornerRadius="@dimen/_10dp"
            android:id="@+id/cvPhoneProfile"
            app:layout_constraintStart_toEndOf="@id/cvEmailProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cvEmailProfile"
            app:layout_constraintBottom_toBottomOf="@id/cvEmailProfile">
            <LinearLayout
                android:layout_width="@dimen/_56dp"
                android:layout_height="@dimen/_56dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/_21dp"
                    android:layout_height="@dimen/_21dp"
                    android:src="@drawable/phone"
                    android:contentDescription="@string/txt_imageview"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250dp"
            android:layout_marginStart="@dimen/_32dp"
            android:layout_marginEnd="@dimen/_32dp"
            android:layout_marginTop="@dimen/_32dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:id="@+id/cvAbout"
            app:layout_constraintTop_toBottomOf="@id/cvGithubProfile"
            app:cardCornerRadius="@dimen/_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_about"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/tvAboutTitle"/>

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nsProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAboutTitle"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_content"/>
                </androidx.core.widget.NestedScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>